k8s-deploy.yml
# TODO: define storage via PersistentVolumeClaims (replicate?)
# TODO: mount ssh keys
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tts-ui
  labels:
    app: tts-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tts-ui
  template:
    metadata:
      labels:
        app: tts-ui
        name: tts-ui
    spec:
      containers:
        - name: tts-ui
          image: sthinds/tts-ui:latest
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3550
---
apiVersion: v1
kind: Service
metadata:
  name: tts-ui
  labels:
    app: tts-ui
spec:
  type: NodePort
  selector:
    app: tts-ui
    name: tts-ui
  ports:
    # TODO: is this right?
    - port: 80
      targetPort: 3550 # containerPort
      name: tts-ui
  # TODO: figure out if this is needed
  externalIPs:
    - 192.168.1.240

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: tts-ui-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    # kubernetes.io/ingress.class: "nginx"
spec:
  # defaultBackend:
  #   service:
  #     name: tts-ui
  #     port:
  #       number: 80
  rules:
    - host: tts-ui
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tts-ui
                port:
                  number: 3550

  ingressClassName: nginx
